// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Renders with size '1' 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-1"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Checkbox Renders with size '2' 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-2"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Checkbox Renders with size '3' 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-3"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Checkbox Renders with size '4' 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-4"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Checkbox Renders with size '5' 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-6"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Checkbox renders correctly with label 1`] = `
<label
  className="Label__Test__root Label__Test--hasInput Checkbox__Test__root Checkbox__Test---size-1-1"
>
  <span
    className="Label__Test__text"
  >
    Subscribe
  </span>
  <span
    className="Checkbox__Test__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;
